// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot guest 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "delete_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "roles": "team_user",
      "scheme_admin": false,
      "scheme_guest": false,
      "scheme_user": false,
      "team_id": "team_id",
      "user_id": "user_id",
    }
  }
  scope="team"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "system_guest",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    Guest
  </div>
</UsersToRemoveRole>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot scope channel and admin membership 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "channel_id": "channel_id",
      "last_update_at": 0,
      "last_viewed_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "notify_props": Object {
        "channel_auto_follow_threads": "off",
        "desktop": "default",
        "email": "default",
        "ignore_channel_mentions": "default",
        "mark_unread": "all",
        "push": "default",
      },
      "roles": "channel_user",
      "scheme_admin": true,
      "scheme_user": true,
      "urgent_mention_count": 0,
      "user_id": "user_id",
    }
  }
  scope="channel"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    Channel Admin
  </div>
</UsersToRemoveRole>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot scope channel and admin membership but user is sys admin 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "channel_id": "channel_id",
      "last_update_at": 0,
      "last_viewed_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "notify_props": Object {
        "channel_auto_follow_threads": "off",
        "desktop": "default",
        "email": "default",
        "ignore_channel_mentions": "default",
        "mark_unread": "all",
        "push": "default",
      },
      "roles": "channel_user",
      "scheme_admin": true,
      "scheme_user": true,
      "urgent_mention_count": 0,
      "user_id": "user_id",
    }
  }
  scope="channel"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "system_admin system_user",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    System Admin
  </div>
</UsersToRemoveRole>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot scope channel and regular membership 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "channel_id": "channel_id",
      "last_update_at": 0,
      "last_viewed_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "notify_props": Object {
        "channel_auto_follow_threads": "off",
        "desktop": "default",
        "email": "default",
        "ignore_channel_mentions": "default",
        "mark_unread": "all",
        "push": "default",
      },
      "roles": "channel_user",
      "scheme_admin": false,
      "scheme_user": true,
      "urgent_mention_count": 0,
      "user_id": "user_id",
    }
  }
  scope="channel"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    Member
  </div>
</UsersToRemoveRole>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot scope team and admin membership 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "delete_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "roles": "team_user",
      "scheme_admin": true,
      "scheme_guest": false,
      "scheme_user": true,
      "team_id": "team_id",
      "user_id": "user_id",
    }
  }
  scope="team"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    Team Admin
  </div>
</UsersToRemoveRole>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemoveRole should match snapshot scope team and regular membership 1`] = `
<UsersToRemoveRole
  membership={
    Object {
      "delete_at": 0,
      "mention_count": 0,
      "mention_count_root": 0,
      "msg_count": 0,
      "msg_count_root": 0,
      "roles": "team_user",
      "scheme_admin": false,
      "scheme_guest": false,
      "scheme_user": true,
      "team_id": "team_id",
      "user_id": "user_id",
    }
  }
  scope="team"
  user={
    Object {
      "auth_service": "",
      "bot_description": "",
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "first_name": "",
      "groups": Array [
        Object {
          "allow_reference": true,
          "create_at": 1,
          "delete_at": 0,
          "description": "",
          "display_name": "group1",
          "has_syncables": false,
          "id": "group1",
          "member_count": 0,
          "name": "group_name",
          "remote_id": "",
          "scheme_admin": false,
          "source": "",
          "update_at": 1,
        },
      ],
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
>
  <div
    className="UsersToRemoveRole"
  >
    Member
  </div>
</UsersToRemoveRole>
`;
